# aipkg

./: .gitignore  Cargo.toml  HOSTING.md  LICENSE  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: cli.rs  config.rs  install.rs  main.rs  query.rs  uninstall.rs  upgrade.rs  utils.rs  verify.rs  yaml_gen.rs
src/repo/: appimage_yaml.rs  cache.rs  collectives.rs  fetcher.rs  index_yaml.rs  mod.rs  resolver.rs
